update the locale

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -89,7 +89,7 @@
   "<1>Four-oh-four</1>! How did you get here?": "<1>Four-oh-four</1>! How did you get here?",
   "Open URL": "Open URL",
   "Open URL{{url}}": "Open URL{{url}}",
-  "Press <2>F12</2> and open devtools for more details, or seek help at <6>onedrive-vercel-index discussions</6>.": "Press <2>F12</2> and open devtools for more details, or seek help at <6>onedrive-vercel-index discussions</6>.",
+  "Press <2>F12</2> and open devtools for more details, or seek help at my <6>Discord DMs</6>!": "Press <2>F12</2> and open devtools for more details, or seek help at my <6>Discord DMs</6>!",
   "Proceed to OAuth": "Proceed to OAuth",
   "Requesting tokens": "Requesting tokens",
   "Restart": "Restart",
